# Nibelheim

./: CMakeLists.txt  CMakePresets.json  README.md
assets/models/: learning_cube.gltf
shaders/: ToneMapping.hlsl  Triangles.hlsl
src/: GltfLoader.cpp  GltfLoader.h  HResult.h  MeshData.h  WicImageLoader.cpp  WicImageLoader.h  main.cpp
